--- a/ingress-host-based-selfsigned.yaml
+++ b/ingress-host-based-selfsigned.yaml
@@ -4,8 +4,7 @@ metadata:
   name: ingress-host-based-selfsigned
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
-    #kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/issuer: "nginx-selfsinged-issuer"
+    cert-manager.io/issuer: "nginx-selfsigned-issuer"
 spec:
   ingressClassName: nginx
   tls:
