--- a/ingress-path-based-selfsigned.yaml
+++ b/ingress-path-based-selfsigned.yaml
@@ -5,8 +5,7 @@ metadata:
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /
-    #kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/issuer: "nginx-selfsinged-issuer"
+    cert-manager.io/issuer: "nginx-selfsigned-issuer"
 spec:
   ingressClassName: nginx
   tls:
